<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Ambient settings -->
    <string name="ambient_enable">Enable ambient display</string>

    <!-- Popup camera settings -->
    <string name="popup_title">Front camera settings</string>
    <string name="popup_led_title">Camera LED</string>
    <string name="popup_led_summary">Enable LED light while the front camera appears and retracts</string>
    <string name="popup_sound_title">Popup sound effect</string>
    <string name="popup_sound_muqin">Xylophone</string>
    <string name="popup_sound_yingyan">Condor</string>
    <string name="popup_sound_mofa">Magic</string>
    <string name="popup_sound_jijia">Mecha</string>
    <string name="popup_sound_chilun">Gearwheel</string>
    <string name="popup_sound_cangmen">Cabin door</string>

    <!-- Popup camera strings -->
    <string name="popup_camera_tip">Warning</string>
    <string name="popup_camera_takeback_failed_calibrate">Couldn\'t close front camera. Try calibrating the motor.</string>
    <string name="popup_camera_popup_failed_calibrate">Couldn\'t open front camera. Try calibrating the motor.</string>
    <string name="popup_camera_calibrate_running">Front camera cannot be used during calibration.</string>
    <string name="popup_camera_calibrate_now">Calibrate</string>
    <string name="popup_camera_calibrate_failed">Couldn\'t calibrate</string>
    <string name="popup_camera_calibrate_success">Calibrated successfully. You can open the front camera now.</string>

    <!-- Dirac settings -->
    <string name="dirac_enable">Enable dirac</string>
    <string name="dirac_title">Dirac sound enhancer</string>
    <string name="dirac_summary">Optimize sound quality with Dirac, Hi-Fi</string>
    <string name="dirac_headset_title">Headset type</string>
    <string name="dirac_hifi_enable_title">Enable Hi-Fi</string>
    <string name="dirac_preset_title">Sound preset</string>

    <string name="dirac_hifi_title">Hi-Fi</string>
    <string name="dirac_hifi_summary">Decrease noise and Distortion and increase audio quality</string>

    <string name="dirac_headset_default">Default</string>
    <string name="dirac_headset_earbuds">Mi Earbuds</string>
    <string name="dirac_headset_in_ear_2013">Mi In-Ear (2013)</string>
    <string name="dirac_headset_piston_1">Mi Piston 1</string>
    <string name="dirac_headset_general">General Earbuds</string>
    <string name="dirac_headset_general_inear">General In-Ear</string>
    <string name="dirac_headset_piston_basic">Basic Edition</string>
    <string name="dirac_headset_piston_2">Mi Piston 2</string>
    <string name="dirac_headset_piston_standard">Mi Piston 3</string>
    <string name="dirac_headset_headphone">Mi Headphone</string>
    <string name="dirac_headset_piston_youth">Youth Edition</string>
    <string name="dirac_headset_piston_color">Color Edition</string>
    <string name="dirac_headset_in_ear">Mi In-Ear</string>
    <string name="dirac_headset_capsule">Mi Capsule</string>
    <string name="dirac_headset_in_ear_pro">Mi In-Ear Pro</string>
    <string name="dirac_headset_comfort">Mi Comfort</string>
    <string name="dirac_headset_reduction_noise">Mi Noise Cancelling (Type-C)</string>
    <string name="dirac_headset_cancelling">Mi Noise Cancelling (3.5mm)</string>
    <string name="dirac_headset_half_in_ear">Mi Half In-Ear</string>
    <string name="dirac_headset_in_ear2">Mi In-Ear 2</string>
    <string name="dirac_headset_earphone_basic">Mi Earphones Basic</string>
    <string name="dirac_headset_earphone">Mi Earphones</string>

    <string name="dirac_preset_default">Default</string>
    <string name="dirac_preset_rock">Rock</string>
    <string name="dirac_preset_jazz">Jazz</string>
    <string name="dirac_preset_pop">Pop</string>
    <string name="dirac_preset_classical">Classical</string>
    <string name="dirac_preset_hiphop">Hiphop</string>
    <string name="dirac_preset_blues">Blues</string>
    <string name="dirac_preset_electronic">Electronic</string>
    <string name="dirac_preset_country">Country</string>
    <string name="dirac_preset_dance">Dance</string>
    <string name="dirac_preset_metal">Metal</string>

    <!-- Clear Speaker -->
    <string name="clear_speaker_title">Clear speaker</string>
    <string name="clear_speaker_summary">Play a 30-second audio to clear the speaker</string>
    <string name="clear_speaker_description">Run this feature once or twice if you find that your speaker is lightly blocked by dust. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this feature 2-5 times while shaking your device with the speaker facing downwards.\n\nWARNING: Ensure that any headphones are unplugged.</string>

    <!--Display settings fragment -->
    <string name="display_settings_title">Custom display settings</string>
    <string name="display_settings_summary">HBM, DC Dimming</string>

    <!-- DC dimming settings -->
    <string name="dc_dimming_enable_title">DC Dimming</string>
    <string name="dc_dimming_enable_summary">DC Dimming reduces eye strain in low light conditions (Note: reduce image quality)</string>
    <string name="dc_dimming_enable_summary_not_supported">DC Dimming is not currently supported by the kernel</string>

    <!-- HBM settings -->
    <string name="hbm_mode_title">High Brightness Mode</string>
    <string name="hbm_mode_summary">High Brightness Mode allows the display panel brightness to go above the maximum stock value. Which helps in improving visibility in direct sunlight</string>
    <string name="hbm_enable_summary_not_supported">HBM is not currently supported by the kernel</string>
</resources>
